<resources>
    <string name="app_name">TORQAPP</string>
    <!--NavBar-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--Login-->
    <string name="app_title">TUP-Taguig Traceability Of Request</string>
    <string name="app_email">Email Address</string>
    <string name="app_pass">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="app_dept">Department</string>
    <string name="app_login">Login</string>
    <string name="app_register">REGISTER</string>
    <string name="app_position">Position</string>
    <string name="app_confirm">Confirm Password</string>
    <string name="app_course">Course</string>
    <string name="app_school_name">Technological University of the Philippines - Taguig Campus (TUP-T)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
